ps-datacloud/main/default/objects/ssot__Product__dlm/fields/Display_URL__c.field-meta.xml
<CustomField>
    <fullName>Display_URL__c</fullName>
    <label>Display URL</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Display URL</labelOverride>
        <masterLabel>Display URL</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Url</type>
</CustomField>