ps-datacloud/main/default/objects/ssot__Product__dlm/fields/OS_Version__c.field-meta.xml
<CustomField>
    <fullName>OS_Version__c</fullName>
    <label>OS Version</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>OS Version</labelOverride>
        <masterLabel>OS Version</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>