ps-datacloud/main/default/objects/ssot__Product__dlm/fields/Product_Features__c.field-meta.xml
<CustomField>
    <fullName>Product_Features__c</fullName>
    <label>Product Features</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Features</labelOverride>
        <masterLabel>Product Features</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>