ps-datacloud/main/default/objects/ssot__Product__dlm/fields/Product_Maintenance_Safety__c.field-meta.xml
<CustomField>
    <fullName>Product_Maintenance_Safety__c</fullName>
    <label>Product Maintenance &amp; Safety</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Maintenance &amp; Safety</labelOverride>
        <masterLabel>Product Maintenance &amp; Safety</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>