ps-datacloud/main/default/objects/ssot__Product__dlm/fields/Product_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Product_Specifications__c</fullName>
    <label>Product Specifications</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Specifications</labelOverride>
        <masterLabel>Product Specifications</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>